[gd_scene load_steps=2 format=3 uid="uid://utgmmppel4pf"]

[ext_resource type="Script" path="res://assets/scripts/ui/Countdown.gd" id="1_pe0v5"]

[node name="CountdownAlert" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1440.0
offset_bottom = -1050.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pe0v5")

[node name="GridContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AlertText" type="RichTextLabel" parent="GridContainer"]
offset_bottom = 30.0
size_flags_horizontal = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
text = "Countdown Alert Text Placeholder"

[node name="sec" type="RichTextLabel" parent="GridContainer"]
offset_left = 381.0
offset_right = 428.0
offset_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 0.984314, 0, 1)
text = "00"

[node name="dsec" type="RichTextLabel" parent="GridContainer"]
offset_left = 432.0
offset_right = 480.0
offset_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 0.984314, 0, 1)
text = "0"

[node name="dSecTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TotalTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="dSecTimer" to="." method="_on_d_sec_timer_timeout"]
[connection signal="timeout" from="TotalTimer" to="." method="_on_total_timer_timeout"]
